[package]
name = "prefix_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
radix_trie = "0.2.1"

[[bench]]
name = "prefix_array"
harness = false

[features]
default = ["std"]
std = []

[dependencies]
ref-cast = "1.0.15"
